src/objects/ReviewMember__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalPMorDisigneeConfirms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Project Manager or Designee confirms that the Check / Review process has been followed</description>
        <label>Approval PM or Disignee Confirms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checker_Date__c</fullName>
        <label>Checker Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Checker_Initials__c</fullName>
        <label>Checker Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>For comments column, select N (None), HC (Hard Copy), EF (Electronic File – add network link), or Form (Review Comment Form Q4NA-351-FM1).</description>
        <inlineHelpText>For comments column, select N (None), HC (Hard Copy), EF (Electronic File – add network link), or Form (Review Comment Form Q4NA-351-FM1).</inlineHelpText>
        <label>Comments</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <picklist>
            <picklistValues>
                <fullName>Calculations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <label>Discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributionOtherFile__c</fullName>
        <description>Other - Specify</description>
        <label>Distribution Other File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Description__c</fullName>
        <label>General Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndReviewerCommentsDirectlyonWorkProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comments Directly on Work Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndReviewerOtherCheckNetworkFile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OtherCheckNetworkFile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IndReviewerReviewCommentForm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Comment Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originator_Date__c</fullName>
        <label>Originator Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Originator_Initials__c</fullName>
        <label>Originator Initials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectCentralFile__c</fullName>
        <description>Project Central File – Quality File Folder</description>
        <inlineHelpText>Project Central File – Quality File Folder</inlineHelpText>
        <label>Distribution Project Central File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>TechnicalQualityReview__r.Deliverable__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>TechnicalQualityReview__r.Deliverable__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>TEXT(TechnicalQualityTeamMember__r.Role__c)</formula>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScopeAdequacyofStatements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adequacy of Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeBasisandValidity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basis and Validity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeClientandThirdPartyInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client and Third Party Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeComplianceWithScope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance With Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeConformancewithStandards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conformance with Standards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeDetailCalcCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail Calc Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeGrammerElements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grammer Elements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeOrgClarityCompleteness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Org Clarity Completeness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scope Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScopeSoundnessofApproach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soundness of Approach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Statuses for the technical quality reviewers which will be automatically updated by the approval process.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechnicalQualityReview__c</fullName>
        <label>Technical Quality Review</label>
        <referenceTo>TechnicalQualityReview__c</referenceTo>
        <relationshipLabel>Review Members</relationshipLabel>
        <relationshipName>ReviewMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TechnicalQualityTeamMember__c</fullName>
        <label>Technical Quality Team Member</label>
        <referenceTo>TechnicalQualityTeam__c</referenceTo>
        <relationshipLabel>Review Members</relationshipLabel>
        <relationshipName>ReviewMembers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TypeBidabilityReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bidability Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeCalculationCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeConstructabilityReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConstructabilityReview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeDesignAssumptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DesignAssumptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeDesignReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DesignReview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeDetailCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Detail Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeIndependentReviewIR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Independent Review (IR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeInterdisciplinaryCoordinationReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interdisciplinary Coordination Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeOther__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeSpecificationPackageReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TypeSpecificationPackageReview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeSubconsultantClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subconsultant, Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Stamp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Stamp</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VerifierNoOutstandingIssues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verifier has verified that comments have been adequately addressed.  There are no outstanding issues.</description>
        <label>Verifier No Outstanding Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VerifierUnresolvedIssues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verifier has verified that comments have been adequately addressed, except for unresolved issues.  Any unresolved issues have been submitted to the Project Manager or Designee for final resolution.</description>
        <label>Verifier Unresolved Issues</label>
        <type>Checkbox</type>
    </fields>
    <label>Review Member</label>
    <nameField>
        <displayFormat>Member-{0}</displayFormat>
        <label>Review Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Members</pluralLabel>
    <recordTypes>
        <fullName>Approver</fullName>
        <active>true</active>
        <label>Approver</label>
    </recordTypes>
    <recordTypes>
        <fullName>IndependentReviewer</fullName>
        <active>true</active>
        <label>Independent Reviewer</label>
    </recordTypes>
    <recordTypes>
        <fullName>LeadVerifier</fullName>
        <active>true</active>
        <label>Lead Verifier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reviewer</fullName>
        <active>true</active>
        <label>Reviewer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>